2007-12-02  Badlop  <badlop@process-one.net>

	* src/ejabberdctl.cfg.example: Bugfix in kernel poll. Added SMP
	option. Reorganization of options
	* src/ejabberdctl.template: Added SMP option

	* src/Makefile.in: New options make uninstall and
	uninstall-all (EJAB-293)

2007-12-01  Mickael Remond  <mremond@process-one.net>

	* doc/Makefile: echo seems to interpret \n and \v under MacOSX
	Leopard. I fixed the problem but let me know if it breaks build
	chain in other contexts.

	* Doc/guide.tex: Updated Windows compilation instructions.
	* src/configure.erl: Likewise.

	* doc/ejabberd.hrl: Preparing ejabberd 2.0.0 beta release.
	* doc/version.tex: Likewise.
	
	* src/tls/Makefile.win32: Updated for latest Win32 OpenSSL library.

	* src/odbc_queries.erl: Added a default define value so that we
	can recompile the file manually with a simple erlc command (with the
        default generic value).

2007-12-01  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_pubsub/Makefile.in: Removed mod_pubsub_old mentioning
	* src/mod_pubsub/Makefile.win32: Likewise

	* src/odbc/odbc_queries.erl: Reverted the previous patch because
	it produces "redefining macro 'generic'" compilation error

	* src/mod_caps.erl: CAPS support (thanks to Magnus Henoch)
	* src/ejabberd_local.erl: Support for IQ responses
	* src/jlib.erl: Added iq_query_or_response_info/1 function
	* src/jlib.hrl: Added NS_PUBSUB_ERRORS and NS_CAPS

	* src/mod_pubsub/Makefile.in: New pubsub+pep implementation
	(thanks to Christophe Romain and Magnus Henoch)
	* src/ejabberd_sm.erl: Added get_session_pid/3 function
	* src/ejabberd_c2s.erl: Added get_subscribed_and_online/1 function

2007-11-30  Mickael Remond  <mremond@process-one.net>

	* src/odbc_queries.erl: Added a default define value so that we
	can recompile the file manually with a simple erlc command.

2007-11-29  Badlop  <badlop@process-one.net>

	* src/mod_vcard.erl: Add type of x:data field to search results
	(thanks to Robin Redeker) (EJAB-327)